# decent-render

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  dist-workspace.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-report.yml  publish-client.yml  publish-protocol.yml  release.yml  update-homebrew-shim.yml
apps/decent-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/decent-app/src/: App.test.tsx  App.tsx  main.tsx  styles.css  test-setup.ts
apps/decent-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/decent-app/src-tauri/capabilities/: default.json
apps/decent-app/src-tauri/src/: main.rs
bins/decent/: Cargo.toml
bins/decent-node/: Cargo.toml
bins/decent-node-shim/: Cargo.toml
bins/decent-node-shim/src/: main.rs
bins/decent-node/src/: main.rs  tui.rs
bins/decent/src/: main.rs  tui.rs
crates/supervisor-core/: Cargo.toml
crates/supervisor-core/src/: connection.rs  lib.rs  protocol.rs  purge.rs  runner.rs  status.rs
scripts/: release-check.sh
