[workspace]
resolver = "2"
members = ["crates/supervisor-core", "bins/decent-node"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/decent-render/decent-render"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
