[workspace]
resolver = "2"
members = ["crates/supervisor-core", "bins/decent", "bins/decent-node-shim", "apps/decent-app/src-tauri"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/decent-render/decent-render"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync", "process", "io-util", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.11"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
