[package]
name = "decent-node"
version = "0.0.4"
description = "Decent render network node — CLI and TUI over supervisor-core."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
supervisor-core = { path = "../../crates/supervisor-core" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
open = "5"
ratatui = "0.29"
crossterm = "0.28"
