[package]
name = "supervisor-core"
version = "0.0.1"
description = "Open-source node supervisor core for the Decent render network: dispatch protocol, WebSocket connection loop, and the purge rule."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
