[package]
name = "decent-app"
version = "0.0.1"
description = "Decent Render — operator desktop app"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
supervisor-core = { path = "../../../crates/supervisor-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = "2"
keyring = { version = "3", features = ["apple-native"] }
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
