[package]
name = "decent-app"
version = "0.0.1"
description = "Decent Render — operator desktop app"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Not distributed via cargo-dist — the Tauri app ships as a .dmg/.app via
# Tauri's own bundler, not a bare-binary tarball. Only decent-node (the CLI)
# goes through the dist release pipeline.
[package.metadata.dist]
dist = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
supervisor-core = { path = "../../../crates/supervisor-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = "2"
keyring = { version = "3", features = ["apple-native"] }
open = "5"
reqwest = { version = "0.12", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
